--- a/alcohol.html
+++ b/alcohol.html
@@ -41,7 +41,7 @@
                           <option value="english">EN</option>
                       </select>
                   </div>
-                  <button type="button" class="btn bg-warning col-md-2 col-lg-2 col-xl-2 d-none d-md-block">
+                  <button type="button" class="btn bg-warning col-md-2 col-lg-2 col-xl-2 d-none d-md-block" onclick="window.location.href='My orders.html';">
                       shopping list <span class="badge badge-light bg-success">5</span>
                  </button>
 
@@ -65,8 +65,8 @@
                                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                     <a class="dropdown-item" data-toggle="modal" data-target="#exampleModal" href="#">Login</a>
                                     <a class="dropdown-item" data-toggle="modal" data-target="#register" href="#">Register</a>
-                                    <a class="dropdown-item" href="#">My orders</a>
-                                    <a class="dropdown-item" href="#">Account settings</a>
+                                    <a class="dropdown-item" href="My orders.html">My orders</a>
+                                    <a class="dropdown-item" href="settings.html">Account settings</a>
                                   </div>
                           </div>
               </div>
