--- a/alcohol.html
+++ b/alcohol.html
@@ -235,7 +235,7 @@
                                                                           <div class="card-body">
                                                                             <h5 class="card-text"><a href="">'Armenia' spitak anapak gini</a><h5p>
                                                                             <p class="card-text text-warning"> 3590 dram</p>
-                                                                            <a href="#" class="btn btn-primary w-100">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary w-100">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -243,7 +243,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">'Armenia' karmir kisaqaxcr gini 750ml</a></h5>
                                                                             <p class="card-text  text-warning"> 3460 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -251,7 +251,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">'Armenia' karmir anapak gini </a></h5>
                                                                             <p class="card-text  text-warning"> 3500 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -259,7 +259,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Rusakan arax 'Belaya Berezka' </a></h5>
                                                                             <p class="card-text  text-warning"> 4400 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -267,7 +267,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Rusakan arax 'Belaya Berezka' Gold</a></h5>
                                                                             <p class="card-text  text-warning"> 5200 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -275,7 +275,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href=""> Arax 'Skyy' 40% 1l</a></h5>
                                                                               <p class="card-text  text-warning">7500 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-3">
@@ -283,7 +283,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Konyak 'Ararat Yntir' 7 tarekan</a></h5>
                                                                               <p class="card-text  text-warning"> 24000 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-3">
@@ -291,7 +291,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Konyak 'Ararat Vaspurakan' 15 tarekan 0.7l  </a></h5>
                                                                               <p class="card-text  text-warning"> 28800 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-3">
@@ -299,7 +299,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Konyak 'Ararat Nairi' 20 tarekan</a></h5>
                                                                               <p class="card-text  text-warning"> 41760 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                       </div>
