--- a/cream.html
+++ b/cream.html
@@ -235,7 +235,7 @@
                                                                           <div class="card-body">
                                                                             <h5 class="card-text"><a href="">Ttvaser 'Marianna'18% 180g</a><h5p>
                                                                             <p class="card-text text-warning"> 300 dram</p>
-                                                                            <a href="#" class="btn btn-primary w-100">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary w-100">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-4">
@@ -243,7 +243,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Ttvaser 'Marianna'18% 400g</a></h5>
                                                                             <p class="card-text  text-warning">  500 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-4">
@@ -251,7 +251,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Ttvaser 'Chanax'</a></h5>
                                                                             <p class="card-text  text-warning"> 460 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-4">
@@ -259,7 +259,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end ">
                                                                             <h5 class="card-title"><a href="">Ttvaser 'Ashtarak Kat'18% 400g </a></h5>
                                                                             <p class="card-text  text-warning"> 470 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-4">
@@ -267,7 +267,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end ">
                                                                               <h5 class="card-title"><a href="">Ttvaser 'Ashtarak Kat Kovik' 13% 400g</a></h5>
                                                                               <p class="card-text  text-warning"> 430 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-4" >
@@ -275,7 +275,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Ttvaser 'Biokat' 20% 400g</a></h5>
                                                                               <p class="card-text  text-warning"> 530 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           
