--- a/My orders.html
+++ b/My orders.html
@@ -207,7 +207,7 @@
                                            <thead class="thead-light">
                                                 <tr>
                                                  <th scope="col">Number</th>
-                                                 <th scope="col">Products name</th>
+                                                 <th scope="col">Product name</th>
                                                  <th scope="col">Quantity</th>
                                                  <th scope="col">Cost</th>
                                                 </tr>
@@ -251,7 +251,7 @@
                                             <thead class="thead-light">
                                               <tr>
                                                 <th scope="col">Number</th>
-                                                <th scope="col">Products name</th>
+                                                <th scope="col">Product name</th>
                                                 <th scope="col">Cost</th>
                                               </tr>
                                             </thead>
@@ -330,7 +330,7 @@
                                                                     <div class="card-body d-flex flex-column justify-content-end">
                                                                      <h5 class="card-title"><a href="">Gazavorvac xmichq 'Fanta' 1.5l </a></h5>
                                                                       <p class="card-text  text-warning"> 500 dram</p>
-                                                                      <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                      <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                     </div>
                                                             </div>
                                                             <div class="card col-6 col-md-3">
@@ -338,7 +338,7 @@
                                                                 <div class="card-body d-flex flex-column justify-content-end">
                                                                   <h5 class="card-title"><a href="">Rusakan arax 'Belaya Berezka' Gold</a></h5>
                                                                   <p class="card-text  text-warning"> 5200 dram</p>
-                                                                  <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                  <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                 </div>
                                                             </div>
                                                             <div class="card col-6 col-md-3">
@@ -346,7 +346,7 @@
                                                                 <div class="card-body d-flex flex-column justify-content-end">
                                                                   <h5 class="card-title"><a href="">Tort 'Negri Zhpit'</a></h5>
                                                                   <p class="card-text  text-warning"> 3500 dram</p>
-                                                                  <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                  <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                 </div>
                                                             </div>
                                                             <div class="card col-6 col-md-3">
@@ -354,7 +354,7 @@
                                                                 <div class="card-body d-flex flex-column justify-content-end">
                                                                   <h5 class="card-title"><a href="">Shlor</a></h5>
                                                                   <p class="card-text  text-warning">1 kg - 1000 dram</p>
-                                                                  <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                  <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                 </div>
                                                             </div>
                                                         </div>
