--- a/bread.html
+++ b/bread.html
@@ -252,7 +252,7 @@
                                                                           <div class="card-body">
                                                                             <p class="card-text"><a href="product.html" class="text-danger">Matnakash</a></p>
                                                                             <p class="card-text text-warning">200 dram</p>
-                                                                            <a href="#" class="btn btn-primary w-100">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary w-100">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -260,7 +260,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">Hrazdan</a></p>
                                                                             <p class="card-text  text-warning">200 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3" >
@@ -268,7 +268,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end ">
                                                                             <p class="card-title"><a href="product.html">sev hac</a></p>
                                                                             <p class="card-text  text-warning">240 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -276,7 +276,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">hac'Romashka'</a></p>
                                                                             <p class="card-text  text-warning">130 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -284,7 +284,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end ">
                                                                             <p class="card-title"><a href="product.html">baton</a></p>
                                                                             <p class="card-text  text-warning">110 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -292,7 +292,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">lavash</a></p>
                                                                             <p class="card-text  text-warning">1 hat-100 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -300,7 +300,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="">hac 'Caxik'</a></p>
                                                                             <p class="card-text  text-warning">140 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -308,7 +308,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">hac 'Buxanka'</a></p>
                                                                             <p class="card-text  text-warning">200 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -316,7 +316,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">Matnakash</a></p>
                                                                             <p class="card-text  text-warning">170 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -324,7 +324,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">hac 'Somin' (sev)</a></p>
                                                                             <p class="card-text  text-warning">180 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -332,7 +332,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end ">
                                                                             <p class="card-title"><a href="product.html">hac 'Stolichni' ktratac</a></p>
                                                                             <p class="card-text  text-warning">230 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -340,7 +340,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">hac 'Rzhanoy'</a></p>
                                                                             <p class="card-text  text-warning">240 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6">
@@ -348,7 +348,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <p class="card-title"><a href="product.html">Sevani sev hac</a></p>
                                                                             <p class="card-text  text-warning">250 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         
