--- a/cakes.html
+++ b/cakes.html
@@ -235,7 +235,7 @@
                                                                           <div class="card-body">
                                                                             <h5 class="card-text"><a href="">Elakov tort</a><h5p>
                                                                             <p class="card-text text-warning"> 2800 dram</p>
-                                                                            <a href="#" class="btn btn-primary w-100">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary w-100">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-4">
@@ -243,7 +243,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Zheleyov tort</a></h5>
                                                                             <p class="card-text  text-warning"> 2000 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-4">
@@ -251,7 +251,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end ">
                                                                             <h5 class="card-title"><a href="">Tort 'Shaxmat'</a></h5>
                                                                             <p class="card-text  text-warning"> 4000 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-4">
@@ -259,7 +259,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Tort 'Negri Zhpit'</a></h5>
                                                                             <p class="card-text  text-warning"> 3500 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-4">
@@ -267,7 +267,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Limonov Tort</a></h5>
                                                                             <p class="card-text  text-warning"> 3300 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-4">
@@ -275,7 +275,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Katnashorov bulkiner</a></h5>
                                                                               <p class="card-text  text-warning">1hat - 200 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                       </div>
