--- a/drinks.html
+++ b/drinks.html
@@ -235,7 +235,7 @@
                                                                           <div class="card-body">
                                                                             <h5 class="card-text"><a href="">Gazavorvac xmichq 'Coca Cola' 2l</a><h5p>
                                                                             <p class="card-text text-warning"> 630 dram</p>
-                                                                            <a href="#" class="btn btn-primary w-100">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary w-100">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3" >
@@ -243,7 +243,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Gazavorvac xmichq 'Coca Cola' 1.5l</a></h5>
                                                                             <p class="card-text  text-warning"> 520 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -251,7 +251,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Gazavorvac xmichq 'Coca Cola' 1l</a></h5>
                                                                             <p class="card-text  text-warning">420 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3" >
@@ -259,7 +259,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Gazavorvac xmichq 'Fanta' 1.5l </a></h5>
                                                                             <p class="card-text  text-warning"> 500 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -267,7 +267,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Gazavorvac xmichq 'Fanta' citrusayin miqsov 1l</a></h5>
                                                                             <p class="card-text  text-warning"> 470 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -275,7 +275,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Gazavorvac xmichq 'Nataxtari' tandzi,xaghoghi,tarxuni hamov ev qaxcr 1l</a></h5>
                                                                               <p class="card-text  text-warning">Cankacacy- 420 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-3">
@@ -283,7 +283,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Gazavorvac xmichq 'Sprite' 1.5l</a></h5>
                                                                               <p class="card-text  text-warning"> 550 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-3">
@@ -291,7 +291,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end ">
                                                                               <h5 class="card-title"><a href="">Hanqayin jur 'Jermuk' 1l</a></h5>
                                                                               <p class="card-text  text-warning"> 400 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-3">
@@ -299,7 +299,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Hanqayin jur 'Jermuk' limoni hamov 1l</a></h5>
                                                                               <p class="card-text  text-warning"> 440 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                       </div>
