--- a/fruits.html
+++ b/fruits.html
@@ -235,7 +235,7 @@
                                                                           <div class="card-body">
                                                                             <h5 class="card-text"><a href="">Kanach xndzor</a><h5p>
                                                                             <p class="card-text text-warning">1kg - 450dram</p>
-                                                                            <a href="#" class="btn btn-primary w-100">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary w-100">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3" >
@@ -243,7 +243,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Tsiran</a></h5>
                                                                             <p class="card-text  text-warning">1 kg - 1000dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3" >
@@ -251,7 +251,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end ">
                                                                             <h5 class="card-title"><a href="">  Karmir Xndzor</a></h5>
                                                                             <p class="card-text  text-warning">1 kg - 500 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -259,7 +259,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Narinj</a></h5>
                                                                             <p class="card-text  text-warning">1kg - 400 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -267,7 +267,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">limon</a></h5>
                                                                             <p class="card-text  text-warning">1 hat - 100 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -275,7 +275,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end ">
                                                                               <h5 class="card-title"><a href="">Dzmeruk</a></h5>
                                                                               <p class="card-text  text-warning">1 kg - 300 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-3">
@@ -283,7 +283,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Sex</a></h5>
                                                                               <p class="card-text  text-warning">1 kg - 250 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-3">
@@ -291,7 +291,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Xaghogh</a></h5>
                                                                               <p class="card-text  text-warning">1 kg - 200 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-3">
@@ -299,7 +299,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Shlor</a></h5>
                                                                               <p class="card-text  text-warning">1 kg - 1000 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-3">
@@ -307,7 +307,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">gilas spitak</a></h5>
                                                                               <p class="card-text  text-warning">1 kg- 800 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-3">
@@ -315,7 +315,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Gilas karmir</a></h5>
                                                                               <p class="card-text  text-warning">1 kg - 900 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-3">
@@ -323,7 +323,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Bal</a></h5>
                                                                               <p class="card-text  text-warning">1 kg - 850 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-6">
@@ -331,7 +331,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Deghdz</a></h5>
                                                                               <p class="card-text  text-warning">1 kg- 600 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-6">
@@ -339,7 +339,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">mandarin</a></h5>
                                                                               <p class="card-text  text-warning">1 kg - 300 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           
