--- a/product.html
+++ b/product.html
@@ -239,7 +239,7 @@
                                                                     <button class="bg-success text-white ml-4 mt-4 rounded-pill border-dark">Avelacnel</button>
                                                                 </div>
                                                                   <div class="col-md-6 d-flex flex-column justify-content-end mt-4 ">
-                                                                    <a href="#" class="btn btn-primary mt-4">Add to cart</a>
+                                                                    <a href="cart.html" class="btn btn-primary mt-4">Add to cart</a>
                                                                   </div>
                                                             </div>          
                                                         </div>
@@ -253,7 +253,7 @@
                                                                                       <div class="card-body d-flex flex-column justify-content-end bg-dark">
                                                                                         <p class="card-title"><a href="#">Hrazdan</a></p>
                                                                                         <p class="card-text  text-warning">200 dram</p>
-                                                                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                                        <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                                       </div>
                                                                                     </div>
                                                                                     <div class="card col-6 col-md-2" style="width: 18rem;">
@@ -261,7 +261,7 @@
                                                                                       <div class="card-body d-flex flex-column justify-content-end bg-dark">
                                                                                         <p class="card-title"><a href="#">sev hac</a></p>
                                                                                         <p class="card-text  text-warning">240 dram</p>
-                                                                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                                        <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                                       </div>
                                                                                     </div>
                                                                                     <div class="card col-6 col-md-2" style="width: 18rem;">
@@ -269,7 +269,7 @@
                                                                                       <div class="card-body d-flex flex-column justify-content-end bg-dark">
                                                                                         <p class="card-title"><a href="#">hac'Romashka'</a></p>
                                                                                         <p class="card-text  text-warning">130 dram</p>
-                                                                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                                        <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                                       </div>
                                                                                     </div>
                                                                                     <div class="card col-6 col-md-2" style="width: 18rem;">
@@ -277,7 +277,7 @@
                                                                                       <div class="card-body d-flex flex-column justify-content-end bg-dark">
                                                                                         <p class="card-title"><a href="#">baton</a></p>
                                                                                         <p class="card-text  text-warning">110 dram</p>
-                                                                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                                        <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                                       </div>
                                                                                     </div>
                                                                                     <div class="card col-6 col-md-2" style="width: 18rem;">
@@ -285,7 +285,7 @@
                                                                                       <div class="card-body d-flex flex-column justify-content-end bg-dark">
                                                                                         <p class="card-title"><a href="#">lavash</a></p>
                                                                                         <p class="card-text  text-warning">1 hat-100 dram</p>
-                                                                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                                        <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                                       </div>
                                                                                     </div>
                                                                                     <div class="card col-6 col-md-2" style="width: 18rem;">
@@ -293,7 +293,7 @@
                                                                                       <div class="card-body d-flex flex-column justify-content-end bg-dark">
                                                                                         <p class="card-title"><a href="#">hac 'Caxik'</a></p>
                                                                                         <p class="card-text  text-warning">140 dram</p>
-                                                                                        <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                                        <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                                       </div>
                                                                                     </div>
                                                                                     
