--- a/sausage.html
+++ b/sausage.html
@@ -236,7 +236,7 @@
                                                                           <div class="card-body">
                                                                             <h5 class="card-text"><a href="">Ershik 'Bekon'</a><h5p>
                                                                             <p class="card-text text-warning">  600 dram</p>
-                                                                            <a href="#" class="btn btn-primary w-100">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary w-100">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -244,7 +244,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Basturma</a></h5>
                                                                             <p class="card-text  text-warning">0.25kg- 2600 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             <div class="form-check text-warning">
                                                                                 <input class="form-check-input" type="checkbox" value="" id="whitebread">
                                                                                 <label class="form-check-label" for="whitebread">
@@ -258,7 +258,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end ">
                                                                             <h5 class="card-title"><a href="">Ershik 'Bekon Peperoni'</a></h5>
                                                                             <p class="card-text  text-warning">1kg- 890 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             <div class="form-check text-warning">
                                                                                 <input class="form-check-input" type="checkbox" value="" id="whitebread">
                                                                                 <label class="form-check-label" for="whitebread">
@@ -272,7 +272,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">nrbershik 'Bekon'</a></h5>
                                                                             <p class="card-text  text-warning">1kg- 900 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -280,7 +280,7 @@
                                                                           <div class="card-body d-flex flex-column justify-content-end">
                                                                             <h5 class="card-title"><a href="">Ershik 'Atenq' bzhshkakan</a></h5>
                                                                             <p class="card-text  text-warning"> 1 kg - 800 dram</p>
-                                                                            <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                            <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                           </div>
                                                                         </div>
                                                                         <div class="card col-6 col-md-3">
@@ -288,7 +288,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Nrbershik 'Bekon'</a></h5>
                                                                               <p class="card-text  text-warning">1 kg - 1000 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                             </div>
                                                                           </div>
                                                                           <div class="card col-6 col-md-3">
@@ -296,7 +296,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end ">
                                                                               <h5 class="card-title"><a href="">Epac ershik Gyumri 'Atenq'</a></h5>
                                                                               <p class="card-text  text-warning">1kg - 1200 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                               <div class="form-check text-warning">
                                                                                 <input class="form-check-input" type="checkbox" value="" id="whitebread">
                                                                                 <label class="form-check-label" for="whitebread">
@@ -310,7 +310,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Basturma 'Bekon'</a></h5>
                                                                               <p class="card-text  text-warning"> 0.25kg - 2700dram (1kg-10800 dram)</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                               <div class="form-check text-warning">
                                                                                 <input class="form-check-input" type="checkbox" value="" id="whitebread">
                                                                                 <label class="form-check-label" for="whitebread">
@@ -324,7 +324,7 @@
                                                                             <div class="card-body d-flex flex-column justify-content-end">
                                                                               <h5 class="card-title"><a href="">Ershik 'Atenq' germanakan,epac</a></h5>
                                                                               <p class="card-text  text-warning"> 750 dram</p>
-                                                                              <a href="#" class="btn btn-primary">Add to cart</a>
+                                                                              <a href="cart.html" class="btn btn-primary">Add to cart</a>
                                                                               <div class="form-check text-warning">
                                                                                 <input class="form-check-input" type="checkbox" value="" id="whitebread">
                                                                                 <label class="form-check-label" for="whitebread">
