--- a/cart.html
+++ b/cart.html
@@ -202,7 +202,8 @@
                          </div>
      <div class="row p-3 d-flex justify-content-center">
       <h2 class="text-success mt-4">Your products</h2> 
-        <table class="table  mt-4">
+     </div>
+        <table class="table  mt-4 container">
           <thead class="thead-light">
                <tr>
                 <th scope="col">Number</th>
@@ -255,7 +256,7 @@
              <a href="payment.html" class="btn btn-primary ml-4">Checkout</a>
           </div>
       
-     </div>
+     
      <div class="row p-1">
       <nav class="navbar  bg-warning w-100  p-3  ">
         <ul class="nav w-100 list-group-horizontal-md ">
