--- a/order.html
+++ b/order.html
@@ -205,7 +205,8 @@
                          </div>
                          <div class="row p-3 d-flex justify-content-start">
                           <h2 class="text-success mt-4">Your products</h2> 
-                            <table class="table  mt-4">
+                         </div>
+                            <table class="table  mt-4 container">
                               <thead class="thead-light">
                                    <tr>
                                     <th scope="col">Number</th>
@@ -253,7 +254,7 @@
                                                      </tr>
                                        </tbody>
                            </table>
-                         </div>
+                         
                             <hr class="bg-dark">
 
 
