--- a/shipping.html
+++ b/shipping.html
@@ -207,7 +207,7 @@
                           <p class="text-danger mt-4">ATTENTION! Your order can be delayed because of COVID-19.</p> 
                         </div>
                          <form class="mt-3">
-                          <div class="form-row col-12">
+                          <div class="form-row col-12 d-flex justify-content-center">
                             <div class="form-group col-8 col-md-4">
                               <label for="inputEmail4">Country</label>
                               <input type="email" class="form-control" id="inputEmail4">
@@ -217,21 +217,27 @@
                               <input type="text" class="form-control" id="inputPassword4">
                             </div>
                           </div>
+                          <div class="form-row col-12 d-flex justify-content-center">
                           <div class="form-group col-8 col-md-4">
                             <label for="inputAddress">Address</label>
                             <input type="text" class="form-control" id="inputAddress">
                           </div>
+                        </div>
+                        <div class="form-row col-12 d-flex justify-content-center">
                           <div class="form-group col-8 col-md-4">
                             <label for="inputAddress2">Address 2 (If you have)</label>
                             <input type="text" class="form-control" id="inputAddress2">
                           </div>
-                          <div class="form-row col-12">
+                          </div>
+                          <div class="form-row col-12 d-flex justify-content-center">
                             <div class="form-group col-8 col-md-4">
                               <label for="inputCity">House</label>
                               <input type="text" class="form-control" id="inputCity">
                             </div>
                           </div>
+                          <div class="row col-12 d-flex justify-content-center">
                            <a href="order.html" class="btn btn-primary">Place order</a>
+                          </div>
                         </form>
      <div class="row p-1">
       <nav class="navbar  bg-warning w-100  p-3  ">
