--- a/payment.html
+++ b/payment.html
@@ -207,8 +207,9 @@
                             <img src="img/cards.jpg" alt="" class="img-fluid w-50 h-75">
                         </div>
                               <div class="row mt-3">
-                                  <form class="col-12 col-md-6">
-                                    <div class="custom-control custom-radio custom-control-inline ml-3" style="height: 30px;">
+                                  <form class="col-12">
+                                    <div class="form-row col-12 d-flex justify-content-center">
+                                    <div class="custom-control custom-radio custom-control-inline ml-3 " style="height: 30px;">
                                         <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
                                         <label class="custom-control-label" for="customRadioInline1">Kanxik</label>
                                       </div>
@@ -216,23 +217,34 @@
                                         <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
                                         <label class="custom-control-label" for="customRadioInline2">Online</label>
                                       </div>
-                                    <div class="form-group ml-3 col-7 col-md-6">
+                                    </div>
+                                    <div class="form-row col-12 d-flex justify-content-center">
+                                    <div class="form-group ml-3 col-7 col-md-3">
                                       <label for="exampleInputname">Card number</label>
                                       <input type="text" class="form-control" id="exampleInputname" aria-describedby="emailHelp" maxlength="19">
                                     </div>
-                                    <div class="form-group ml-3 col-7 col-md-6">
+                                    </div>
+                                    <div class="form-row col-12 d-flex justify-content-center">
+                                    <div class="form-group ml-3 col-7 col-md-3">
                                       <label for="exampleInputsurname">Your name in card</label>
                                       <input type="text" class="form-control" id="exampleInputsurname" >
                                     </div>
-                                    <div class="form-group ml-3 col-7 col-md-6">
+                                  </div>
+                                  <div class="form-row col-12 d-flex justify-content-center">
+                                    <div class="form-group ml-3 col-7 col-md-3">
                                         <label for="exampleInputemail">Expiry date</label>
                                         <input type="email" class="form-control" id="exampleInputemail" maxlength="5">
                                       </div>
-                                      <div class="form-group ml-3 col-7 col-md-6">
+                                    </div>
+                                    <div class="form-row col-12 d-flex justify-content-center">
+                                      <div class="form-group ml-3 col-7 col-md-3">
                                         <label for="exampleInputtelephone">CVV</label>
                                         <input type="text" class="form-control" id="exampleInputtelephone" maxlength="3">
                                       </div>
+                                    </div>
+                                    <div class="form-row col-12 d-flex justify-content-center">
                                       <a href="shipping.html" class="btn btn-primary">Shipping</a>
+                                    </div>
                                   </form>
                                      
 
